--- a/altair_test.ipynb
+++ b/altair_test.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 165,
    "id": "32ee38c9",
    "metadata": {},
    "outputs": [],
@@ -270,17 +270,37 @@
     "                 projection ='equalEarth', phi = 0, theta = 0, scale = 100,\n",
     "                 map_fill = 'darkgrey', map_stroke = 'lightgrey',\n",
     "                 color_var = 'significance', color_scheme = 'magma',\n",
+    "                 opacity_var = 'magnitude',\n",
     "                 size_var = 'magnitude', size_range = [10, 200]):\n",
     "    rotation = [phi, theta, 0]\n",
     "    Projection = alt.Projection(type = projection, rotate=rotation, scale = scale)\n",
     "\n",
+    "    if color_var == 'time':\n",
+    "        color_var += ':T'\n",
+    "    else:\n",
+    "        color_var += ':Q'\n",
+    "    \n",
+    "    if size_var == 'time':\n",
+    "        size_var += ':T'\n",
+    "    else:\n",
+    "        size_var += ':Q'\n",
+    "\n",
+    "    if opacity_var == 'time':\n",
+    "        opacity_var += ':T'\n",
+    "    else:\n",
+    "        opacity_var += ':Q'\n",
+    "\n",
     "    ColorScale = alt.Scale(scheme = color_scheme)\n",
     "    ColorLegend = alt.Legend(title = color_var)\n",
-    "    Color = alt.Color(color_var+':Q', scale = ColorScale, legend=ColorLegend)\n",
+    "    Color = alt.Color(color_var, scale = ColorScale, legend=ColorLegend)\n",
     "\n",
     "    SizeScale = alt.Scale(range=size_range)\n",
     "    SizeLegend = alt.Legend(title = size_var)\n",
-    "    Size = alt.Size(size_var+':Q', scale=SizeScale, legend=SizeLegend)\n",
+    "    Size = alt.Size(size_var, scale=SizeScale, legend=SizeLegend)\n",
+    "\n",
+    "    OpacityScale = alt.Scale(range = [0.1, 1])\n",
+    "    OpacityLegend = alt.Legend(title = opacity_var)\n",
+    "    Opacity = alt.Opacity(opacity_var, scale=OpacityScale, legend=OpacityLegend)\n",
     "\n",
     "    topo = alt.topo_feature(data.world_110m.url, 'countries')\n",
     "\n",
@@ -303,6 +323,7 @@
     "        longitude = 'longitude:Q',\n",
     "        latitude = 'latitude:Q',\n",
     "        size = Size,\n",
+    "        opacity= Opacity,\n",
     "        color = alt.condition(brush,\n",
     "                            Color,\n",
     "                            alt.value('lightgrey')),\n",
@@ -323,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 166,
    "id": "db855bba",
    "metadata": {},
    "outputs": [
@@ -342,7 +363,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2bd83ee1d30>"
+       "<IPython.lib.display.IFrame at 0x2bd9fc47e70>"
       ]
      },
      "metadata": {},
@@ -398,9 +419,19 @@
     "        [\n",
     "            'Color Variable:',\n",
     "            dcc.Dropdown(\n",
-    "                options = eq.select_dtypes(include=['number']).columns.tolist(),\n",
+    "                options = eq.select_dtypes(include=['number', 'datetime64[ns, UTC]']).columns.tolist(),\n",
     "                value = 'significance',\n",
     "                id = 'color_var'\n",
+    "            )\n",
+    "        ]\n",
+    "    ),\n",
+    "     html.Div(\n",
+    "        [\n",
+    "            'Opacity Variable:',\n",
+    "            dcc.Dropdown(\n",
+    "                options = eq.select_dtypes(include=['number', 'datetime64[ns, UTC]']).columns.tolist(),\n",
+    "                value = 'time',\n",
+    "                id = 'opacity_var'\n",
     "            )\n",
     "        ]\n",
     "    ),\n",
@@ -419,9 +450,10 @@
     "    Input('map_stroke', 'value'),\n",
     "    Input('background', 'value'),\n",
     "    Input('size_var', 'value'),\n",
-    "    Input('color_var', 'value')\n",
+    "    Input('color_var', 'value'),\n",
+    "    Input('opacity_var', 'value')\n",
     ")\n",
-    "def update_output(proj_dd, phi, theta, scale, map_fill, map_stroke, background, size_var, color_var):\n",
+    "def update_output(proj_dd, phi, theta, scale, map_fill, map_stroke, background, size_var, color_var, opacity_var):\n",
     "    chart_spec = create_chart(eq, \n",
     "                              projection=proj_dd, \n",
     "                              phi=phi, theta=theta, \n",
@@ -429,7 +461,8 @@
     "                              map_fill=map_fill, \n",
     "                              map_stroke = map_stroke,\n",
     "                              size_var=size_var,\n",
-    "                              color_var=color_var\n",
+    "                              color_var=color_var,\n",
+    "                              opacity_var=opacity_var\n",
     "                              ).properties(\n",
     "                                  background = background).to_dict()\n",
     "    return dvc.Vega(\n",
@@ -443,11 +476,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "426f99c8",
+   "execution_count": 161,
+   "id": "49f23542",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "time            datetime64[ns, UTC]\n",
+       "location                     object\n",
+       "latitude                    float64\n",
+       "longitude                   float64\n",
+       "depth                       float64\n",
+       "magnitude                   float64\n",
+       "alert                        object\n",
+       "url                          object\n",
+       "eventtype                    object\n",
+       "significance                  int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eq.dtypes"
+   ]
   }
  ],
  "metadata": {
