--- a/altair_test.ipynb
+++ b/altair_test.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 185,
    "id": "32ee38c9",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,9 @@
     "                 map_fill = 'darkgrey', map_stroke = 'lightgrey',\n",
     "                 color_var = 'significance', color_scheme = 'magma',\n",
     "                 opacity_var = 'magnitude',\n",
-    "                 size_var = 'magnitude', size_range = [10, 200]):\n",
+    "                 size_var = 'magnitude', size_range = [10, 200],\n",
+    "                 filter_vars = ['magnitude', 'significance', 'depth', 'longitude', 'latitude']):\n",
+    "    \n",
     "    rotation = [phi, theta, 0]\n",
     "    Projection = alt.Projection(type = projection, rotate=rotation, scale = scale)\n",
     "\n",
@@ -302,8 +304,31 @@
     "    OpacityLegend = alt.Legend(title = opacity_var)\n",
     "    Opacity = alt.Opacity(opacity_var, scale=OpacityScale, legend=OpacityLegend)\n",
     "\n",
-    "    topo = alt.topo_feature(data.world_110m.url, 'countries')\n",
     "\n",
+    "    hists = {}\n",
+    "    selectors = {}\n",
+    "    for var in filter_vars:\n",
+    "                    \n",
+    "        selectors[var] = alt.selection_interval(name = var + '_brush')\n",
+    "        if var == 'time':\n",
+    "            type = ':T'\n",
+    "        else:\n",
+    "            type = ':Q'\n",
+    "\n",
+    "        hists[var] = alt.Chart(df).mark_bar().encode(\n",
+    "            x = alt.X(var + type, bin=True),\n",
+    "            y = 'count()',\n",
+    "            color = alt.condition(selectors[var],\n",
+    "                                 alt.value('steelblue'),\n",
+    "                                 alt.value('lightgrey'))\n",
+    "        ).properties(\n",
+    "            width = 600,\n",
+    "            height = 25\n",
+    "        ).add_params(\n",
+    "            selectors[var]\n",
+    "        )\n",
+    "\n",
+    "    topo = alt.topo_feature(data.world_110m.url, 'countries')\n",
     "    earth = alt.Chart(topo).mark_geoshape(\n",
     "        fill = map_fill,\n",
     "        stroke = map_stroke\n",
@@ -316,6 +341,7 @@
     "    graticule = alt.Chart(alt.graticule()).mark_geoshape().properties(projection = Projection)\n",
     "\n",
     "    earth += graticule\n",
+    "\n",
     "\n",
     "    brush = alt.selection_interval(name = \"brush\")\n",
     "\n",
@@ -338,13 +364,18 @@
     "    ).add_params(\n",
     "        brush\n",
     "    )   \n",
-    "    return earth + quakes\n",
+    "\n",
+    "    earth+=quakes\n",
+    "\n",
+    "    for hist in hists.values():\n",
+    "        earth &= hist\n",
+    "    return earth\n",
     "#create_chart(eq)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 186,
    "id": "db855bba",
    "metadata": {},
    "outputs": [
@@ -363,7 +394,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2bd9fc47e70>"
+       "<IPython.lib.display.IFrame at 0x2bd9fd17460>"
       ]
      },
      "metadata": {},
